--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==3.2.1
 django-allauth==0.41.0
 idna==2.10
 oauthlib==3.1.0
+Pillow==8.2.0
 python3-openid==3.2.0
 pytz==2021.1
 requests==2.25.1
